# captcha-game

./: Cargo.toml
assets/cat/grey/: cat-resting-happy.pxo  grey-cat.pxo
src/: main.rs  pet.rs  supplies.rs  utils.rs  world.rs
